# BriCLI

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
Config/: bricli_config.h
Examples/Authentication/: main.c
Examples/Simple CLI/: BuildAndRun.ps1  CMakeLists.txt  main.c
Include/bricli/: bricli.h  colours.h  command.h  handle.h  writer.h
Scripts/: Build.ps1  Clean.ps1
Source/: bricli.c  bricli.h
Test/: CMakeLists.txt  TestAuth.cpp  TestHandlers.cpp  TestReceive.cpp  TestSend.cpp
config/: bricli_config.h
examples/Authentication/: CMakeLists.txt  main.c
examples/authentication/: CMakeLists.txt  main.c
examples/basic/: CMakeLists.txt  main.c
inc/bricli/: api.h  bricli.h  colours.h  escape_codes.h  options.h  types.h
include/bricli/: auth.h  bricli.h  error.h  escape_codes.h  parser.h  settings.h  util.h
scripts/: Test.ps1  build.sh  clean.sh
source/: bricli.c
src/: bricli.c
test/: CMakeLists.txt  ParserTest.cpp  TestAuth.cpp  TestHandlers.cpp  TestReceive.cpp  TestSend.cpp
